cluster/infrastructure/rustfs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-s3
  namespace: rustfs
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - s3.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rustfs-s3
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-console
  namespace: rustfs
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - rustfs.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rustfs-console
          port: 9001
